actually fix tables and nickname overflow this time

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -57,9 +57,11 @@ td, tr, th {
 }
 
 p {
-	line-height: 0 !important;
-	margin-top: 1em !important;
-	margin-bottom: 1em !important;
+	line-height: 1.2;
+	margin: 0;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 td{
